--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
-                    <form class = "bg-dark"
+                    <form class = "bg-dark">
                         <p>Filter Search</p>
                     <ul class="list-group bg-dark">
 
@@ -53,9 +53,22 @@
                         <input type="text" placeholder="1/20/2010" id="datetime"/>
 
                     </li>
-                    <li class="list-group-item">
-                        <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                    <li class="list-group-item bg-dark">
+                        <label for="city">Enter City Name</label>
+                        <input type="text" placeholder="benton" id="city"/>
 
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="state">Enter State</label>
+                        <input type="text" placeholder="ar" id="state"/>
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="country">Enter Country</label>
+                        <input type="text" placeholder="us" id="country"/>
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="shape">Shape</label>
+                        <input type="text" placeholder="circle" id="shape"/>
                     </li>
                     </form>
                 </div>
@@ -80,7 +93,7 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-     <script src="static/js/data.js"></script>
-     <script src="static/js/app.js"></script>
-</body>
-</html>
+    <script src="static/js/data.js"></script>
+    <script src="static/js/app.js"></script>
+    </body>
+    </html>
